# web-hw-4

./: pyproject.toml
First task/: main.py
first_task/: main.py
first_task/storage/: data.json
